Some random fixes
